--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </div>
           <h2 class="experience-sub-title project-title">English Resume</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://docs.google.com/document/d/1Aqr1F2_K6wT2-9bRUOoca8Q6bXwUoawq/edit?usp=drive_link&ouid=117166869035524713807&rtpof=true&sd=true">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://docs.google.com/document/d/1Aqr1F2_K6wT2-9bRUOoca8Q6bXwUoawq/edit?usp=drive_link&ouid=117166869035524713807&rtpof=true&sd=true'">
 
               View
             </button>
@@ -206,7 +206,7 @@
           </div>
           <h2 class="experience-sub-title project-title">Kiswahili Resume</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='assets/docs/kiswahili resume.pdf'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://docs.google.com/document/d/1zX4VOzmFpHz3UUS-I5-q_wwwBk1MJRXG/edit?usp=sharing&ouid=117166869035524713807&rtpof=true&sd=true'">
               View
             </button>
             <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
