--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <h1 class="title">Benedict Musyoki</h1>
       <p class="section__text__p2">IT Student</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('https://docs.google.com/document/d/1Aqr1F2_K6wT2-9bRUOoca8Q6bXwUoawq/edit?usp=drive_link&ouid=117166869035524713807&rtpof=true&sd=true')">
-          Download CV
+        <button class="btn btn-color-2" onclick="window.open('https://docs.google.com/document/d/1Aqr1F2_K6wT2-9bRUOoca8Q6bXwUoawq/edit?usp=sharing&ouid=117166869035524713807&rtpof=true&sd=true')">
+          View CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
           Contact Info
